--- a/basic calculator/index.html
+++ b/basic calculator/index.html
@@ -10,8 +10,8 @@
     <div id="calculator">
       <input id="result" placeholder="0" readonly />
       <div id="button">
-        <button onclick="clearValue()" class="diffColor">AC</button>
-        <button onclick="deleteValue()" class="diffColor">DE</button>
+        <button onclick="clearValue()" >AC</button>
+        <button onclick="deleteValue()">DE</button>
         <button onclick="displayValue('%')" class="color">%</button>
         <button onclick="displayValue('/')" class="color">/</button>
         <button onclick="displayValue('7')">7</button>
@@ -29,7 +29,7 @@
         <button onclick="displayValue('00')">00</button>
         <button onclick="displayValue('0')">0</button>
         <button onclick="displayValue('.')">.</button>
-        <button onclick="calc()" class="diffColor">=</button>
+        <button onclick="calc()">=</button>
       </div>
     </div>
 
