--- a/Landing page- Star Hotel/index.html
+++ b/Landing page- Star Hotel/index.html
@@ -250,7 +250,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 Web Design Mastery. All rights reserved.
+        Copyright © 2024  | Aditya R Bharti. All rights reserved.
       </div>
     </footer>
   </body>
